--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Background Generator</h1>
     <input type="color" name="color1" value="#00ff00" id="inputColor1">
     <input type="color" name="color2" value="#ff0000" id="inputColor2">
-    <h2>Current CSS Background</h2>
+    <h2>This is the background</h2>
     <h3></h3>
     <script src="script.js"></script>
 </body>
